--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
 	functions="functions"
+	external_node_modules = ["express"]
+ 	node_bundler = "esbuild"
 
 [[redirects]]
+	force = true
 	to="/.netlify/functions/api/:splat"
 	from="/*"
 	status=200
